syntax = "proto3";

package productService;

import "product.proto";

option go_package = "productservice/productpb";

message GetProductRequest {
  int32 productId = 1;
}

message GetProductReply {
  product.Product product = 1;
}

service Product {
  rpc GetProduct(GetProductRequest) returns (GetProductReply) {}
}